--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@
   background-color: wheat;
 }
 .pellet {
-  background-color: rgb(188, 143, 229);
-  border: 7px solid white;
+  background-color: rgb(155, 50, 65);
+  border: 8px solid white;
   box-sizing: border-box;
 }
 .ghost-home {
@@ -83,6 +83,32 @@ h4 {
   font-size: larger;
   border: 1px solid blue;
 }
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    text-align: center;
+    border-radius: 5px;
+}
+#restartButton {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #3498db;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
 @media screen and (max-width: 600px) {
   .board {
     width: 240px;
@@ -93,6 +119,7 @@ h4 {
     height: 8px;
   }
   .pellet {
-    border: 1px solid white;
+    border: 2px solid white;
+    border-radius: 4px;
   }
 }
